CSRF protection disabled for services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ hostAndPort: localhost:8080
 spring.profiles.active: dev
 
 #Database Configuration
-spring.datasource.url=jdbc:mysql://localhost/teamfinder?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost/suspy?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=suspy
 spring.datasource.password=samolot123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database= MYSQL
